added the differential area figure.

--- a/oct12/Oct-12Class.tex
+++ b/oct12/Oct-12Class.tex
@@ -87,7 +87,13 @@ If we have \textbf{isotropic scattering}, we can remove the angle dependence and
 \item The total source is the sum of these three, and is now independent of angle.
 \end{itemize}
 %
-We can use this source in Eqn.~\ref{eq:integral}, integrate the integrating factor over angle, and get an expression for the scalar flux. When doing this, we will note the following things
+We can use this source in Eqn.~\ref{eq:integral}, integrate the integrating factor over angle, and get an expression for the scalar flux. When doing this, we will note the following things based on the figure below
+%
+\begin{figure}[h]
+\begin{center}
+  \includegraphics[width=1.25 in]{../figs/diff-area}
+\end{center}
+\end{figure}
 \begin{align*}
 d\vOmega &= \frac{dA}{\rho'^2}\\
 d\rho' dA &= dV \\
