--- a/oct14/Oct-14Class.tex
+++ b/oct14/Oct-14Class.tex
@@ -134,7 +134,7 @@ We also need the boundary condition of zero \textit{outgoing} adjoint flux.
 Interpretation of adjoint flux as \textit{neutron importance}
 
 Let's think about a problem with an external source: $H \psi = q_{ex}$, where $\psi$ meets the boundary conditions.\\
-We'd like to find out the response of a detector with cross section $\Sigma_d$ and volume $V_d$ to that source: $R = V_d \int dE\: \Sigma_d(E) \int_{4\pi} \psi(\rvec_d, \vOmega, E)$. \\
+We'd like to find out the response of a detector with cross section $\Sigma_d$ and volume $V_d$ to that source: $R = V_d \int dE\: \Sigma_d(E) \int_{4\pi} d\vOmega \: \psi(\rvec_d, \vOmega, E)$. \\
 \begin{itemize}
 \item we'll set up the adjoint problem with the detector response as the source
 \[H^{\dagger}\psi^{\dagger} = q_{ex}^{\dagger} \equiv V_d \Sigma_d \delta(\rvec - \rvec_d)\]
@@ -182,86 +182,5 @@ Thus, the contribution to $\psi^{\dagger}(\rvec, \vOmega, E)$ from scattering is
 \item Boundary condition: $\psi^{\dagger}(\rvec, \vOmega, E) = 0\:, \: \hat{n}\cdot \vOmega > 0$.\\
 Neutrons exiting the problem configuration cannot scatter back and so cannot contribute to the detector inside. 
 \end{itemize}
-
-------------------------\\
-The Adjoint Equation in \textbf{Multiplying Media}
-
-We will call the fission operator $G$, where
-\[
-G \zeta = \frac{\chi(E)}{4\pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4\pi} d\vOmega' \psi(\rvec, \vOmega', E')
-\]
-To get the adjoint version, we can take the same approach as with the scattering operator to get
-\[
-G^{\dagger} \zeta^{\dagger} = \frac{\nu(E) \Sigma_f(E)}{4\pi}\int_0^{\infty} dE' \: \chi(E') \int_{4\pi} d\vOmega' \psi^{\dagger}(\rvec, \vOmega', E')
-\]
-We can combine this operator with $H$ to use the techniques in the preceding section to look at subcritical systems.\\
-We replace $H$ and $H^{\dagger}$ with $H-G$ and $H^{\dagger}-G^{\dagger}$, respectively.\\
-
-To look at the \textit{eigenvalue} form of the problem:
-\[
-H\psi - \frac{1}{k}G\psi = 0
-\]
-where $\psi$ is the fundamental solution mode, $\psi > 0$ for $\rvec \in V$, $\psi(\vec{r}_s, \vOmega, E) = 0$ for $\hat{n} \cdot \vOmega < 0$ with $\vec{r}_s \in \Gamma$.  
-\[
-H^{\dagger}\psi^{\dagger} - \frac{1}{k^{\dagger}}G^{\dagger}\psi^{\dagger} = 0
-\]
-Now $\psi^{\dagger}$ is the fundamental mode, $\psi^{\dagger} > 0$ for $\rvec \in V$, $\psi^{\dagger}(\vec{r}_s, \vOmega, E) = 0$ for $\hat{n} \cdot \vOmega > 0$ with $\vec{r}_s \in \Gamma$.  
-
-Next, compare the two equations the way we did for response: multiply the forward equation by $\psi^{\dagger}$, integrate both over volume, and subtract
-\begin{align*}
-\langle\psi^{\dagger}, H\psi\rangle - \langle\psi, H^{\dagger} \psi^{\dagger}\rangle &- \frac{1}{k}\langle\psi^{\dagger}, G\psi\rangle + \frac{1}{k^{\dagger}}\langle\psi, G^{\dagger}\psi^{\dagger}\rangle = 0\\
-\bigl(\frac{1}{k} - \frac{1}{k^{\dagger}} \bigr)\langle\psi^{\dagger}, G\psi\rangle  &= 0 \\
-k &= k^{\dagger} \quad \text{because }G\psi > 0
-\end{align*}
-
-\clearpage----------------------------\\
-\textbf{Reactivity} of a \textbf{Perturbed System}
-
-Recall that reactivity is the measure of a system's deviation from critical: $\rho = \frac{k-1}{k}$.\\
-We are interested in how small changes (perturbations) in a system will cause reactivity to change.\\
-We can use the adjoint equation to help us.
-
-We will denote small changes with a preceding $\delta$ and unperturbed values with a subscript $0$. Thus, for small changes in $k$ we can say 
-\[
-\delta \rho = \frac{\delta k}{k_0^2}
-\]
-For an unperturbed reactor we have these fundamental mode equations:
-\begin{align*}
-H_0\psi_0 &- \frac{1}{k_0}G_0\psi_0 = 0\\
-H_0^{\dagger}\psi_0^{\dagger} &- \frac{1}{k_0^{\dagger}}G_0^{\dagger}\psi_0^{\dagger} = 0
-\end{align*}
-We can represent system perturbation by adding small quantities to the operators and fluxes (very small compared to things themselves). For the forward system we get
-\[
-(H_0 + \delta H)(\psi_0 + \delta \psi) - \frac{1}{k_0 + \delta k}(G_0 + \delta G)(\psi_0 + \delta \psi) = 0
-\]
-Because perturbations are small, we can ignore second order terms. Then
-\begin{align*}
-H_0 \psi_0 + \delta H \psi_0 &+ H_0\delta\psi - \bigl(\frac{1}{k_0 + \delta k}\bigr)\bigl(G_0\psi_0 + \delta G \psi_0 + G_0\delta\psi \bigr) \approx 0 \\
-%
-\frac{1}{k_0 + \delta k} &= \frac{1}{k_0(1 + \delta k/k_0)} \approx \frac{1}{k_0}\bigl(1 - \frac{\delta k}{k_0}\bigr) \\
-\\
-%
--\frac{\delta k}{k_0^2}G_0\psi_0 &\approx \underbrace{\bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\psi_0}_{\text{fundamental mode}=0} + \bigl(\delta H - \frac{1}{k_0}\delta G\bigr)\psi_0  + \bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\delta \psi
-\end{align*}
-To use inner product identities, we can multiply by $\psi_0^{\dagger}$ and integrate over phase space to get
-\begin{equation}
--\frac{\delta k}{k_0^2} \langle \psi_0^{\dagger}, G_0\psi_0 \rangle \approx \langle \psi_0^{\dagger},\bigl(\delta H - \frac{1}{k_0}\delta G\bigr)\psi_0 \rangle + \langle \psi_0^{\dagger},\bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\delta \psi \rangle
-\label{eq:perturb}
-\end{equation}
-
-Next, we can use the adjoint identity (using a modified operator) and let $\zeta = \delta\psi$ and $\zeta^{\dagger} = \psi_0^{\dagger}$ we can see:
-\begin{align*}
-\langle\zeta^{\dagger}, H \zeta\rangle &= \langle\zeta, H^{\dagger} \zeta^{\dagger}\rangle \\
-%
-\langle \psi_0^{\dagger}, \bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\delta \psi \rangle &= \langle \delta \psi,  \bigl(H_0^{\dagger} - \frac{1}{k_0^{\dagger}}G_0^{\dagger} \bigr)\psi_0^{\dagger} \rangle
-\end{align*}
-We know that the second part of the rhs is 0 because of the definition of the adjoint equation.\\
-This means the lhs is also 0, we can can remove it from Eqn.~\ref{eq:perturb}.
-
-With all of this, we can now say
-\[
-\frac{\delta k}{k_0^2} \approx \frac{\langle \psi_0^{\dagger},\bigl(\delta H - \frac{1}{k_0}\delta G\bigr)\psi_0 \rangle}{\langle \psi_0^{\dagger}, G_0\psi_0 \rangle}
-\]
-This means that if we know the two unperturbed solutions $\psi_0^{\dagger}$ and $\psi$ we can find the reactivity change for any perturbations.
 
 \end{document}
